# http-server

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  Makefile  TODO.md  cmake_install.cmake  http.cpp  http.h
.cache/clangd/index/: __stddef_max_align_t.h.8D6000DFA8FE3292.idx  allocated_ptr.h.BA4DCBCF9F3DDDD0.idx  array.AA50409F2671137C.idx  atomic.4770DA9962B3D55E.idx  auto_ptr.h.513B946B5AA36FF9.idx  byteswap.h.6F2302C3C3B7048C.idx  ccomplex.7E336B566DD9A240.idx  cerrno.42EE3207DAE36C7A.idx  cfloat.BC07D70FD5407C29.idx  cinttypes.23EC589E2A477EAA.idx  client.h.1E71B80314A92AF7.idx  climits.631C9C10BB65757D.idx  cmath.8B9DEC2A1E76AF4D.idx  complex.6F9E838E2C057360.idx  condition_variable.3022600724E87AA1.idx  csignal.855581D418EF5AC6.idx  (+87 more)
.ccls-cache/@@home@PrinceAmmon@github@http-server/: @home@linuxbrew@.linuxbrew@Cellar@llvm@15.0.6@lib@clang@15.0.6@include@__stddef_max_align_t.h.blob  @home@linuxbrew@.linuxbrew@Cellar@llvm@15.0.6@lib@clang@15.0.6@include@float.h.blob  @home@linuxbrew@.linuxbrew@Cellar@llvm@15.0.6@lib@clang@15.0.6@include@inttypes.h.blob  @home@linuxbrew@.linuxbrew@Cellar@llvm@15.0.6@lib@clang@15.0.6@include@limits.h.blob  @home@linuxbrew@.linuxbrew@Cellar@llvm@15.0.6@lib@clang@15.0.6@include@stdalign.h.blob  @home@linuxbrew@.linuxbrew@Cellar@llvm@15.0.6@lib@clang@15.0.6@include@stdarg.h.blob  @home@linuxbrew@.linuxbrew@Cellar@llvm@15.0.6@lib@clang@15.0.6@include@stdbool.h.blob  @home@linuxbrew@.linuxbrew@Cellar@llvm@15.0.6@lib@clang@15.0.6@include@stddef.h.blob  @home@linuxbrew@.linuxbrew@Cellar@llvm@15.0.6@lib@clang@15.0.6@include@stdint.h.blob  @usr@include@alloca.h.blob  @usr@include@arpa@inet.h.blob  @usr@include@asm-generic@bitsperlong.h.blob  @usr@include@asm-generic@errno-base.h.blob  @usr@include@asm-generic@errno.h.blob  @usr@include@asm-generic@posix_types.h.blob  @usr@include@asm-generic@socket.h.blob  @usr@include@asm-generic@sockios.h.blob  @usr@include@asm@bitsperlong.h.blob  @usr@include@asm@errno.h.blob  @usr@include@asm@posix_types.h.blob  @usr@include@asm@posix_types_64.h.blob  @usr@include@asm@socket.h.blob  @usr@include@asm@sockios.h.blob  @usr@include@assert.h.blob  @usr@include@bits@byteswap.h.blob  @usr@include@bits@confname.h.blob  @usr@include@bits@cpu-set.h.blob  @usr@include@bits@endian.h.blob  @usr@include@bits@endianness.h.blob  @usr@include@bits@environments.h.blob  @usr@include@bits@errno.h.blob  @usr@include@bits@fenv.h.blob  @usr@include@bits@floatn-common.h.blob  @usr@include@bits@floatn.h.blob  @usr@include@bits@flt-eval-method.h.blob  @usr@include@bits@fp-fast.h.blob  @usr@include@bits@fp-logb.h.blob  @usr@include@bits@getopt_core.h.blob  @usr@include@bits@getopt_posix.h.blob  @usr@include@bits@in.h.blob  (+355 more)
.ccls-cache/@home@PrinceAmmon@github@http-server/: dependencies@my_networking_lib@src@client@client.cpp  dependencies@my_networking_lib@src@client@client.cpp.blob  dependencies@my_networking_lib@src@client@client.h  dependencies@my_networking_lib@src@client@client.h.blob  dependencies@my_networking_lib@src@server@errorcodes.cpp  dependencies@my_networking_lib@src@server@errorcodes.cpp.blob  dependencies@my_networking_lib@src@server@errorcodes.h  dependencies@my_networking_lib@src@server@errorcodes.h.blob  dependencies@my_networking_lib@src@server@networkexception.h  dependencies@my_networking_lib@src@server@networkexception.h.blob  dependencies@my_networking_lib@src@server@server.cpp  dependencies@my_networking_lib@src@server@server.cpp.blob  dependencies@my_networking_lib@src@server@server.h  dependencies@my_networking_lib@src@server@server.h.blob  http.cpp  http.cpp.blob  http.h  http.h.blob  main.cpp  main.cpp.blob
.github/workflows/: cmake.yml
src/: http.cpp  http.h  main.cpp
tests/: CMakeLists.txt  http_server_tests.cpp
